fix total price on mobile

--- a/src/sass/components/header.sass
+++ b/src/sass/components/header.sass
@@ -521,8 +521,8 @@ input[type='search']::-webkit-search-results-decoration
         width: auto
         .product-cheking  
             margin: 10px 0
-        .basket-price:last-child 
-            display: none
+            & ~ .basket-price
+                display: none
 
 .bin
     img
